--- a/Nivell 3/index.html
+++ b/Nivell 3/index.html
@@ -7,54 +7,62 @@
 <meta name="Description" content="Enter your description here"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-<link rel="stylesheet" href="assets/css/style.css">
 <link rel="stylesheet" href="./styles.css">
+<link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@200&display=swap" rel="stylesheet">
 <title>Tasca M07 - 02 Nivell 3</title>
+
 </head>
 <body>
 
+<div class="container-gral">
+    <div class="text-center">
+      <p class="title">
+        EXERCICIS
+      </p>
+    </div>
+    <div class="container">
+            <div class="row">
+              <div class="col-lg-2">
+                <div class="botones" id="btn1">
+                    <button type="button" class="btn btn-primary">Exercici 1
+                    </button>
+                </div>
+              </div>
+                <div class="col-lg-2">
+                  <div class="botones" id="btn2">
+                      <button type="button" class="btn btn-success">Exercici 2
+                      </button>
+                  </div>
+                </div>
+                <div class="col-lg-2">
+                  <div class="botones">
+                      <button type="button" class="btn btn-danger">Exercici 3
+                      </button>
+                  </div>
+                </div>
+                <div class="col-lg-2">
+                  <div class="botones">
+                      <button type="button" class="btn btn-warning">Exercici 4
+                      </button>
+                  </div>
+                </div>
+                <div class="col-lg-2">
+                  <div class="botones">
+                      <button type="button" class="btn btn-info">Exercici 5
+                      </button>
+                  </div>
+                </div>
+            </div>
+            
+    </div>
+    <div id="resultats" class="enunciado">
 
-
-<div class="container" >
-        <div class="row">
-          <div class="col-lg-2">
-            <div class="botones">
-                <button type="button" class="btn btn-primary">Exercici 1
-                </button>
-            </div>
-          </div>
-            <div class="col-lg-2">
-              <div class="botones">
-                  <button type="button" class="btn btn-success">Exercici 2
-                  </button>
-              </div>
-            </div>
-            <div class="col-lg-2">
-              <div class="botones">
-                  <button type="button" class="btn btn-danger">Exercici 3
-                  </button>
-              </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-2">
-              <div class="botones">
-                  <button type="button" class="btn btn-warning">Exercici 4
-                  </button>
-              </div>
-            </div>
-            <div class="col-lg-2">
-              <div class="botones">
-                  <button type="button" class="btn btn-info">Exercici 5
-                  </button>
-              </div>
-            </div>
-        </div>
-        
+    </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"></script>
 <script src="./javascript.js"></script>
 </body>
 </html>
