--- a/Nivell 3/index.html
+++ b/Nivell 3/index.html
@@ -8,20 +8,21 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <link rel="stylesheet" href="./styles.css">
-<link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@200&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet">
 <title>Tasca M07 - 02 Nivell 3</title>
 
 </head>
 <body>
 
 <div class="container-gral">
-    <div class="text-center">
+    <div class="container-text">
       <p class="title">
         EXERCICIS
       </p>
     </div>
     <div class="container">
-            <div class="row">
+        <div class="row text-center">
               <div class="col-lg-2">
                 <div class="botones" id="btn1">
                     <button type="button" class="btn btn-primary">Exercici 1
@@ -35,19 +36,19 @@
                   </div>
                 </div>
                 <div class="col-lg-2">
-                  <div class="botones">
+                  <div class="botones" id="btn3">
                       <button type="button" class="btn btn-danger">Exercici 3
                       </button>
                   </div>
                 </div>
                 <div class="col-lg-2">
-                  <div class="botones">
+                  <div class="botones" id="btn4">
                       <button type="button" class="btn btn-warning">Exercici 4
                       </button>
                   </div>
                 </div>
                 <div class="col-lg-2">
-                  <div class="botones">
+                  <div class="botones" id="btn5">
                       <button type="button" class="btn btn-info">Exercici 5
                       </button>
                   </div>
@@ -55,10 +56,14 @@
             </div>
             
     </div>
+
+    <hr>
+
     <div id="resultats" class="enunciado">
 
     </div>
 </div>
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
